tdf#97357 allow insert image if sheet is protected but few cells are not

- if the currently marked area is fuly unprotected, allow insert image
- if there is no currently marked area, check the current cell

Change-Id: I46608ae349f91f9f2e81a22dd55a817616ca3d3c
Reviewed-on: https://gerrit.libreoffice.org/36160
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>